--- a/about.html
+++ b/about.html
@@ -71,8 +71,7 @@
                         What started as a passion project creating custom pieces for friends and family quickly grew into a beloved brand 
                         known for its exceptional craftsmanship and timeless designs.
                     </p>
-                    <img src="images/workshop.jpg" alt="Our Workshop" class="rounded-lg shadow-md w-full mb-6">
-                </div>
+                    
 
                 <div class="mb-12">
                     <h3 class="text-2xl font-semibold mb-4 text-amber-700">Our Philosophy</h3>
@@ -85,35 +84,10 @@
                         handcrafted by our team of skilled artisans who pour their heart into every detail.
                     </p>
                     <div class="grid grid-cols-2 md:grid-cols-4 gap-4 mb-6">
-                        <img src="images/craft-1.jpg" alt="Craftsmanship" class="rounded-lg shadow-md">
-                        <img src="images/craft-2.jpg" alt="Craftsmanship" class="rounded-lg shadow-md">
-                        <img src="images/craft-3.jpg" alt="Craftsmanship" class="rounded-lg shadow-md">
-                        <img src="images/craft-4.jpg" alt="Craftsmanship" class="rounded-lg shadow-md">
-                    </div>
-                </div>
-
-                <div class="mb-12">
-                    <h3 class="text-2xl font-semibold mb-4 text-amber-700">Our Team</h3>
-                    <p class="text-gray-700 mb-6">
-                        Meet the talented individuals behind EverVow Jewels. Our team comprises master jewelers, gemologists, and designers 
-                        who bring decades of combined experience to every creation.
-                    </p>
-                    <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
-                        <div class="text-center">
-                            <img src="images/team-elena.jpg" alt="Elena Rodriguez" class="w-32 h-32 rounded-full mx-auto mb-4 object-cover shadow-md">
-                            <h4 class="font-bold">Elena Rodriguez</h4>
-                            <p class="text-gray-600">Founder & Lead Designer</p>
-                        </div>
-                        <div class="text-center">
-                            <img src="images/team-miguel.jpg" alt="Miguel Santos" class="w-32 h-32 rounded-full mx-auto mb-4 object-cover shadow-md">
-                            <h4 class="font-bold">Miguel Santos</h4>
-                            <p class="text-gray-600">Master Jeweler</p>
-                        </div>
-                        <div class="text-center">
-                            <img src="images/team-sophia.jpg" alt="Sophia Chen" class="w-32 h-32 rounded-full mx-auto mb-4 object-cover shadow-md">
-                            <h4 class="font-bold">Sophia Chen</h4>
-                            <p class="text-gray-600">Gemologist</p>
-                        </div>
+                        <img src="imagedownload.jpeg" alt="Craftsmanship" class="rounded-lg shadow-md">
+                        <img src="images (11).jpeg" alt="Craftsmanship" class="rounded-lg shadow-md">
+                        <img src="images (3).jpeg" alt="Craftsmanship" class="rounded-lg shadow-md">
+                        <img src="images (6).jpeg" alt="Craftsmanship" class="rounded-lg shadow-md">
                     </div>
                 </div>
 
