--- a/about.html
+++ b/about.html
@@ -84,10 +84,10 @@
                         handcrafted by our team of skilled artisans who pour their heart into every detail.
                     </p>
                     <div class="grid grid-cols-2 md:grid-cols-4 gap-4 mb-6">
-                        <img src="imagedownload.jpeg" alt="Craftsmanship" class="rounded-lg shadow-md">
-                        <img src="images (11).jpeg" alt="Craftsmanship" class="rounded-lg shadow-md">
-                        <img src="images (3).jpeg" alt="Craftsmanship" class="rounded-lg shadow-md">
-                        <img src="images (6).jpeg" alt="Craftsmanship" class="rounded-lg shadow-md">
+                        <img src="evervow/imagedownload.jpeg" alt="Craftsmanship" class="rounded-lg shadow-md">
+                        <img src="evervow/images (11).jpeg" alt="Craftsmanship" class="rounded-lg shadow-md">
+                        <img src="evervow/images (3).jpeg" alt="Craftsmanship" class="rounded-lg shadow-md">
+                        <img src="evervow/images (6).jpeg" alt="Craftsmanship" class="rounded-lg shadow-md">
                     </div>
                 </div>
 
@@ -150,10 +150,8 @@
                 <div>
                     <h4 class="font-semibold mb-4">Connect With Us</h4>
                     <div class="flex space-x-4">
-                        <a href="#" class="text-gray-400 hover:text-white"><i class="fab fa-facebook-f"></i></a>
-                        <a href="#" class="text-gray-400 hover:text-white"><i class="fab fa-instagram"></i></a>
-                        <a href="#" class="text-gray-400 hover:text-white"><i class="fab fa-pinterest-p"></i></a>
-                        <a href="#" class="text-gray-400 hover:text-white"><i class="fab fa-twitter"></i></a>
+                        <a href="#" class="text-gray-400 hover:text-white"><i class="fab fa-facebook-f@https://www.facebook.com/share/18yL8YPUCU/"></i></a>
+                        <a href="#" class="text-gray-400 hover:text-white"><i class="fab fa-instagram@https://www.instagram.com/katlegomichellegaolekwe?igsh=MWp3OXg0NnBuczB1MA=="></i></a>
                     </div>
                 </div>
             </div>
