--- a/testimonials.html
+++ b/testimonials.html
@@ -81,7 +81,7 @@
                             <span class="text-amber-600 font-bold text-xl">M</span>
                         </div>
                         <div>
-                            <h4 class="font-bold">Maria Rodriguez</h4>
+                            <h4 class="font-bold">Mpho Topo</h4>
                             <div class="flex text-amber-500">
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
@@ -131,7 +131,7 @@
                             <span class="text-amber-600 font-bold text-xl">S</span>
                         </div>
                         <div>
-                            <h4 class="font-bold">Sarah Chen</h4>
+                            <h4 class="font-bold">Sarah Kabelo</h4>
                             <div class="flex text-amber-500">
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
