--- a/about.html
+++ b/about.html
@@ -141,12 +141,32 @@
                         <li><a href="contact.html" class="text-gray-400 hover:text-white">Contact Us</a></li>
                     </ul>
                 </div>
-                <div>
-                    <h4 class="font-semibold mb-4">Connect With Us</h4>
-                    <div class="flex space-x-4">
-                        <a href="#" class="text-gray-400 hover:text-white"><i class="fab fa-facebook-f@https://www.facebook.com/share/18yL8YPUCU/"></i></a>
-                        <a href="#" class="text-gray-400 hover:text-white"><i class="fab fa-instagram@https://www.instagram.com/katlegomichellegaolekwe?igsh=MWp3OXg0NnBuczB1MA=="></i></a>
-                    </div>
+               <div class="fb-page" 
+  data-href="https://www.facebook.com/share/18yL8YPUCU/" 
+  data-tabs="timeline" 
+  data-width="340" 
+  data-height="70" 
+  data-small-header="false" 
+  data-adapt-container-width="true" 
+  data-hide-cover="false" 
+  data-show-facepile="true">
+  <blockquote cite="https://www.facebook.com/share/18yL8YPUCU/" class="fb-xfbml-parse-ignore">
+    <a href="https://www.facebook.com/share/18yL8YPUCU/">EverVow Jewels</a>
+  </blockquote>
+</div><div class="flex space-x-4">
+  <a href="https://www.facebook.com/share/18yL8YPUCU/" target="_blank" rel="noopener noreferrer" class="text-gray-400 hover:text-white">
+    <i class="fab fa-facebook-f"></i>
+  </a>
+  <a href="https://www.instagram.com/katlegomichellegaolekwe?igsh=MWp3OXg0NnBuczB1MA==" target="_blank" rel="noopener noreferrer" class="text-gray-400 hover:text-white">
+    <i class="fab fa-instagram"></i>
+  </a>
+  <a href="#" class="text-gray-400 hover:text-white">
+    <i class="fab fa-pinterest-p"></i>
+  </a>
+  <a href="#" class="text-gray-400 hover:text-white">
+    <i class="fab fa-twitter"></i>
+  </a>
+</div> 
                 </div>
             </div>
             <div class="border-t border-gray-800 mt-8 pt-8 text-center text-gray-400">
@@ -181,5 +201,11 @@
             });
         }
     </script>
+<!-- Facebook SDK -->
+<div id="fb-root"></div>
+<script async defer crossorigin="anonymous" 
+  src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v18.0&appId=YOUR_APP_ID&autoLogAppEvents=1" 
+  nonce="YOUR_NONCE">
+</script>
 </body>
 </html>
