--- a/shop.html
+++ b/shop.html
@@ -96,14 +96,36 @@
                         <li><a href="contact.html" class="text-gray-400 hover:text-white">Contact Us</a></li>
                     </ul>
                 </div>
-                <div>
-                    <h4 class="font-semibold mb-4">Connect With Us</h4>
-                    <div class="flex space-x-4">
-                        <a href="#" class="text-gray-400 hover:text-white"><i class="fab fa-facebook-f"></i></a>
-                        <a href="#" class="text-gray-400 hover:text-white"><i class="fab fa-instagram"></i></a>
-                        <a href="#" class="text-gray-400 hover:text-white"><i class="fab fa-pinterest-p"></i></a>
-                        <a href="#" class="text-gray-400 hover:text-white"><i class="fab fa-twitter"></i></a>
-                    </div>
+                <div class="mb-4">
+            <div class="fb-page"
+              data-href="https://www.facebook.com/katlegogaolekwe"
+              data-tabs="timeline"
+              data-width=""
+              data-height=""
+              data-small-header="false"
+              data-adapt-container-width="true"
+              data-hide-cover="false"
+              data-show-facepile="true">
+              <blockquote cite="https://www.facebook.com/katlegogaolekwe" class="fb-xfbml-parse-ignore">
+                <a href="https://www.facebook.com/katlegogaolekwe">Katlego Gaolekwe</a>
+              </blockquote>
+            </div>
+          </div>
+          <div class="flex space-x-4">
+            <a href="https://www.facebook.com/katlegogaolekwe" target="_blank" rel="noopener noreferrer" class="text-gray-400 hover:text-white">
+              <i class="fab fa-facebook-f"></i>
+            </a>
+            <a href="https://www.instagram.com/katlegomichellegaolekwe" target="_blank" rel="noopener noreferrer" class="text-gray-400 hover:text-white">
+              <i class="fab fa-instagram"></i>
+            </a>
+            <a href="#" class="text-gray-400 hover:text-white">
+              <i class="fab fa-pinterest-p"></i>
+            </a>
+            <a href="#" class="text-gray-400 hover:text-white">
+              <i class="fab fa-twitter"></i>
+            </a>
+          </div>
+        </div>
                 </div>
             </div>
             <div class="border-t border-gray-800 mt-8 pt-8 text-center text-gray-400">
