--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <div class="flex items-center space-x-8">
                 <a href="index.html" class="text-xl font-bold text-gray-800">EverVow Jewels</a>
                 <nav class="hidden md:flex space-x-6">
-                    <a href="index.html" class="text-gray-800 hover:text-amber-700">Home</a>
+                    <a href="index.html" class="text-gray-800 hover:text-amber-700 font-semibold">Home</a>
                     <a href="shop.html" class="text-gray-800 hover:text-amber-700">Shop</a>
                     <a href="about.html" class="text-gray-800 hover:text-amber-700">About</a>
                     <a href="testimonials.html" class="text-gray-800 hover:text-amber-700">Testimonials</a>
@@ -42,14 +42,14 @@
         </div>
     </header>
 
-    <!-- Mobile Navigation (hidden on desktop) -->
+    <!-- Mobile Navigation -->
     <div class="md:hidden bg-gray-100 py-2 px-4">
         <div class="flex justify-around">
-            <a href="index.html" class="text-gray-800"><i class="fas fa-home"></i></a>
-            <a href="shop.html" class="text-gray-800"><i class="fas fa-shopping-bag"></i></a>
-            <a href="about.html" class="text-gray-800"><i class="fas fa-info-circle"></i></a>
-            <a href="testimonials.html" class="text-gray-800"><i class="fas fa-star"></i></a>
-            <a href="contact.html" class="text-gray-800"><i class="fas fa-envelope"></i></a>
+            <a href="index.html" class="text-amber-600" aria-label="Home"><i class="fas fa-home"></i></a>
+            <a href="shop.html" class="text-gray-800" aria-label="Shop"><i class="fas fa-shopping-bag"></i></a>
+            <a href="about.html" class="text-gray-800" aria-label="About"><i class="fas fa-info-circle"></i></a>
+            <a href="testimonials.html" class="text-gray-800" aria-label="Testimonials"><i class="fas fa-star"></i></a>
+            <a href="contact.html" class="text-gray-800" aria-label="Contact"><i class="fas fa-envelope"></i></a>
         </div>
     </div>
 
@@ -223,21 +223,21 @@
                     </ul>
                 </div>
                 <div>
-                    <h4 class="font-semibold mb-4">Connect With Us</h4>
-                    <!-- Facebook Page Plugin -->
+                    <h4 class="font-semibold mb-4">Follow Us</h4>
+                    <!-- Facebook Page Embed -->
                     <div class="mb-4">
-                        <div class="fb-page" 
-                             data-href="https://www.facebook.com/katlegogaolekwe" 
-                             data-tabs="timeline" 
-                             data-width="" 
-                             data-height="" 
-                             data-small-header="false" 
-                             data-adapt-container-width="true" 
-                             data-hide-cover="false" 
-                             data-show-facepile="true">
-                            <blockquote cite="https://www.facebook.com/katlegogaolekwe" class="fb-xfbml-parse-ignore">
-                                <a href="https://www.facebook.com/katlegogaolekwe">Katlego Gaolekwe</a>
-                            </blockquote>
+                        <div class="fb-page"
+                          data-href="https://www.facebook.com/katlegogaolekwe"
+                          data-tabs="timeline"
+                          data-width=""
+                          data-height=""
+                          data-small-header="false"
+                          data-adapt-container-width="true"
+                          data-hide-cover="false"
+                          data-show-facepile="true">
+                          <blockquote cite="https://www.facebook.com/katlegogaolekwe" class="fb-xfbml-parse-ignore">
+                            <a href="https://www.facebook.com/katlegogaolekwe">Katlego Gaolekwe</a>
+                          </blockquote>
                         </div>
                     </div>
                     <div class="flex space-x-4">
