--- a/testimonials.html
+++ b/testimonials.html
@@ -49,14 +49,14 @@
         </div>
     </header>
 
-    <!-- Mobile Navigation (hidden on desktop) -->
+    <!-- Mobile Navigation -->
     <div class="md:hidden bg-gray-100 py-2 px-4">
         <div class="flex justify-around">
-            <a href="index.html" class="text-gray-800"><i class="fas fa-home"></i></a>
-            <a href="shop.html" class="text-gray-800"><i class="fas fa-shopping-bag"></i></a>
-            <a href="about.html" class="text-gray-800"><i class="fas fa-info-circle"></i></a>
-            <a href="testimonials.html" class="text-amber-700"><i class="fas fa-star"></i></a>
-            <a href="contact.html" class="text-gray-800"><i class="fas fa-envelope"></i></a>
+            <a href="index.html" class="text-gray-800" aria-label="Home"><i class="fas fa-home"></i></a>
+            <a href="shop.html" class="text-gray-800" aria-label="Shop"><i class="fas fa-shopping-bag"></i></a>
+            <a href="about.html" class="text-gray-800" aria-label="About"><i class="fas fa-info-circle"></i></a>
+            <a href="testimonials.html" class="text-amber-600" aria-label="Testimonials"><i class="fas fa-star"></i></a>
+            <a href="contact.html" class="text-gray-800" aria-label="Contact"><i class="fas fa-envelope"></i></a>
         </div>
     </div>
 
@@ -257,258 +257,4 @@
                         <li><a href="index.html" class="text-gray-400 hover:text-white">Home</a></li>
                         <li><a href="shop.html" class="text-gray-400 hover:text-white">Shop</a></li>
                         <li><a href="about.html" class="text-gray-400 hover:text-white">Our Story</a></li>
-                        <li><a href="testimonials.html" class="text-gray-400 hover:text-white">Testimonials</a></li>
-                    </ul>
-                </div>
-                <div>
-                    <h4 class="font-semibold mb-4">Customer Service</h4>
-                    <ul class="space-y-2">
-                        <li><a href="#" class="text-gray-400 hover:text-white">Shipping Policy</a></li>
-                        <li><a href="#" class="text-gray-400 hover:text-white">Returns & Exchanges</a></li>
-                        <li><a href="#" class="text-gray-400 hover:text-white">FAQ</a></li>
-                        <li><a href="contact.html" class="text-gray-400 hover:text-white">Contact Us</a></li>
-                    </ul>
-                </div>
-                <div>
-                    <h4 class="font-semibold mb-4">Connect With Us</h4>
-                    <div class="flex space-x-4">
-                        <a href="#" class="text-gray-400 hover:text-white"><i class="fab fa-facebook-f"></i></a>
-                        <a href="#" class="text-gray-400 hover:text-white"><i class="fab fa-instagram"></i></a>
-                        <a href="#" class="text-gray-400 hover:text-white"><i class="fab fa-pinterest-p"></i></a>
-                        <a href="#" class="text-gray-400 hover:text-white"><i class="fab fa-twitter"></i></a>
-                    </div>
-                </div>
-            </div>
-            <div class="border-t border-gray-800 mt-8 pt-8 text-center text-gray-400">
-                <p>&copy; 2023 EverVow Jewels. All rights reserved.</p>
-            </div>
-        </div>
-    </footer>
-
-    <!-- Cart Sidebar -->
-    <div id="cart-sidebar" class="cart-sidebar fixed inset-y-0 right-0 w-full sm:w-96 bg-white shadow-xl transform translate-x-full z-50">
-        <div class="p-6 h-full flex flex-col">
-            <div class="flex justify-between items-center mb-6">
-                <h2 class="text-2xl font-bold">Your Cart</h2>
-                <button id="close-cart" class="text-gray-500 hover:text-gray-700 text-xl">&times;</button>
-            </div>
-
-            <div class="flex-1 overflow-y-auto" id="cart-items">
-                <div class="text-center py-8">
-                    <p class="text-gray-500">Your cart is empty</p>
-                </div>
-            </div>
-
-            <div class="border-t pt-4 hidden" id="cart-summary">
-                <div class="flex justify-between mb-2">
-                    <span>Subtotal:</span>
-                    <span id="cart-subtotal">P0.00</span>
-                </div>
-                <div class="flex justify-between mb-2">
-                    <span>Shipping:</span>
-                    <span class="text-green-600">Free</span>
-                </div>
-                <div class="flex justify-between mb-4 font-bold">
-                    <span>Total:</span>
-                    <span id="cart-total">P0.00</span>
-                </div>
-                <button class="w-full bg-amber-600 hover:bg-amber-700 text-white py-2 rounded mb-2">
-                    Proceed to Checkout
-                </button>
-                <a href="shop.html" class="text-center text-gray-600 hover:text-amber-700 text-sm">
-                    Continue Shopping
-                </a>
-            </div>
-        </div>
-    </div>
-
-    <script>
-        // Product Data (for cart functionality)
-        const products = [
-            {
-                id: "1",
-                name: "shy high",
-                price: 1299.99 * 13.5,
-                category: "diamond",
-                imageUrl: "evervow/evercollection.jpg",
-                description: "blue crystal diamond earing"
-            },
-            {
-                id: "2",
-                name: "infinity",
-                price: 8999.99 * 13.5,
-                category: "diamond",
-                imageUrl: "evervow/images (2).jpeg",
-                description: "ring set"
-            },
-            {
-                id: "4",
-                name: "emelda chain",
-                price: 599.99 * 13.5,
-                category: "gold",
-                imageUrl: "evervow/images (5).jpeg",
-                description: "red emerald gold chain"
-            },
-            {
-                id: "10",
-                name: "pearly bangles",
-                price: 149.99 * 13.5,
-                category: "beaded",
-                imageUrl: "evervow/images (4).jpeg",
-                description: "golden bracelet with pearl beads"
-            }
-        ];
-
-        // Cart State
-        let cart = JSON.parse(localStorage.getItem('cart')) || [];
-
-        // DOM Elements
-        const cartButton = document.getElementById('cart-button');
-        const closeCart = document.getElementById('close-cart');
-        const cartSidebar = document.getElementById('cart-sidebar');
-        const cartItemsContainer = document.getElementById('cart-items');
-        const cartSummary = document.getElementById('cart-summary');
-        const cartCount = document.getElementById('cart-count');
-        const cartSubtotal = document.getElementById('cart-subtotal');
-        const cartTotal = document.getElementById('cart-total');
-
-        // Toggle Cart Sidebar
-        cartButton.addEventListener('click', () => {
-            cartSidebar.style.transform = 'translateX(0)';
-            updateCartDisplay();
-        });
-
-        closeCart.addEventListener('click', () => {
-            cartSidebar.style.transform = 'translateX(100%)';
-        });
-
-        // Update Cart Display
-        function updateCartDisplay() {
-            if (cart.length === 0) {
-                cartItemsContainer.innerHTML = '<div class="text-center py-8"><p class="text-gray-500">Your cart is empty</p></div>';
-                cartSummary.classList.add('hidden');
-                cartCount.classList.add('hidden');
-                return;
-            }
-
-            cartCount.textContent = cart.reduce((total, item) => total + item.quantity, 0);
-            cartCount.classList.remove('hidden');
-
-            let itemsHTML = '';
-            let subtotal = 0;
-
-            cart.forEach(item => {
-                const product = products.find(p => p.id === item.id);
-                if (product) {
-                    const itemTotal = product.price * item.quantity;
-                    subtotal += itemTotal;
-
-                    itemsHTML += `
-                        <div class="flex items-center py-4 border-b">
-                            <img src="${product.imageUrl}" alt="${product.name}" class="w-16 h-16 object-cover rounded">
-                            <div class="ml-4 flex-1">
-                                <h4 class="font-medium">${product.name}</h4>
-                                <p class="text-sm text-gray-600">${product.description}</p>
-                                <div class="flex justify-between items-center mt-1">
-                                    <div class="flex items-center border rounded">
-                                        <button class="decrease-quantity px-2 py-1" data-id="${product.id}">-</button>
-                                        <span class="px-2">${item.quantity}</span>
-                                        <button class="increase-quantity px-2 py-1" data-id="${product.id}">+</button>
-                                    </div>
-                                    <span class="font-medium">P${(product.price * item.quantity).toFixed(2)}</span>
-                                </div>
-                            </div>
-                            <button class="remove-item ml-2 text-gray-500 hover:text-red-500" data-id="${product.id}">
-                                <i class="fas fa-times"></i>
-                            </button>
-                        </div>
-                    `;
-                }
-            });
-
-            cartItemsContainer.innerHTML = itemsHTML;
-            cartSubtotal.textContent = `P${subtotal.toFixed(2)}`;
-            cartTotal.textContent = `P${subtotal.toFixed(2)}`;
-            cartSummary.classList.remove('hidden');
-
-            // Add event listeners to new buttons
-            document.querySelectorAll('.increase-quantity').forEach(button => {
-                button.addEventListener('click', (e) => {
-                    const id = e.target.getAttribute('data-id');
-                    increaseQuantity(id);
-                });
-            });
-
-            document.querySelectorAll('.decrease-quantity').forEach(button => {
-                button.addEventListener('click', (e) => {
-                    const id = e.target.getAttribute('data-id');
-                    decreaseQuantity(id);
-                });
-            });
-
-            document.querySelectorAll('.remove-item').forEach(button => {
-                button.addEventListener('click', (e) => {
-                    const id = e.target.closest('button').getAttribute('data-id');
-                    removeFromCart(id);
-                });
-            });
-        }
-
-        // Cart Functions
-        function addToCart(id) {
-            const existingItem = cart.find(item => item.id === id);
-            if (existingItem) {
-                existingItem.quantity += 1;
-            } else {
-                cart.push({ id, quantity: 1 });
-            }
-            saveCart();
-            updateCartDisplay();
-        }
-
-        function increaseQuantity(id) {
-            const item = cart.find(item => item.id === id);
-            if (item) {
-                item.quantity += 1;
-                saveCart();
-                updateCartDisplay();
-            }
-        }
-
-        function decreaseQuantity(id) {
-            const item = cart.find(item => item.id === id);
-            if (item) {
-                item.quantity -= 1;
-                if (item.quantity <= 0) {
-                    cart = cart.filter(item => item.id !== id);
-                }
-                saveCart();
-                updateCartDisplay();
-            }
-        }
-
-        function removeFromCart(id) {
-            cart = cart.filter(item => item.id !== id);
-            saveCart();
-            updateCartDisplay();
-        }
-
-        function saveCart() {
-            localStorage.setItem('cart', JSON.stringify(cart));
-            cartCount.textContent = cart.reduce((total, item) => total + item.quantity, 0);
-            cartCount.classList.toggle('hidden', cart.length === 0);
-        }
-
-        // Initialize cart display
-        updateCartDisplay();
-
-        // Add to cart buttons (if any on this page)
-        document.querySelectorAll('.add-to-cart').forEach(button => {
-            button.addEventListener('click', (e) => {
-                const id = e.target.getAttribute('data-id');
-                addToCart(id);
-            });
-        });
-    </script>
-</body>
-</html>
+                        <li><a href="
