--- a/contact.html
+++ b/contact.html
@@ -133,7 +133,7 @@
                             </div>
                             <div>
                                 <h3 class="font-semibold text-lg mb-1">Our Boutique</h3>
-                                <p class="text-gray-700">123 Jewel Street, Makati City, Metro Manila, Philippines</p>
+                                <p class="text-gray-700">123 sebele  street,airport junction, </p>
                             </div>
                         </div>
                         <div class="flex items-start">
