--- a/about.html
+++ b/about.html
@@ -69,7 +69,7 @@
         <div class="mb-12">
           <h3 class="text-2xl font-semibold mb-4 text-amber-700">Our Beginnings</h3>
           <p class="text-gray-700 mb-6">
-            Founded in 2023 by jewelry enthusiast Elena Rodriguez, EverVow Jewels began as a small boutique studio in Manila.
+            Founded in 2023 by jewelry enthusiast Michelle Gaolekwe, EverVow Jewels began as a small boutique studio in Botswana.
             What started as a passion project creating custom pieces for friends and family quickly grew into a beloved brand
             known for its exceptional craftsmanship and timeless designs.
           </p>
@@ -168,18 +168,12 @@
             </a>
             <a href="https://www.instagram.com/katlegomichellegaolekwe" target="_blank" rel="noopener noreferrer" class="text-gray-400 hover:text-white">
               <i class="fab fa-instagram"></i>
-            </a>
-            <a href="#" class="text-gray-400 hover:text-white">
-              <i class="fab fa-pinterest-p"></i>
-            </a>
-            <a href="#" class="text-gray-400 hover:text-white">
-              <i class="fab fa-twitter"></i>
-            </a>
+            
           </div>
         </div>
       </div>
       <div class="border-t border-gray-800 mt-8 pt-8 text-center text-gray-400">
-        <p>&copy; 2023 EverVow Jewels. All rights reserved.</p>
+        <p>&copy; 2025 EverVow Jewels. All rights reserved.</p>
       </div>
     </div>
   </footer>
@@ -232,7 +226,7 @@
     <script>
         // Automatically updates copyright year
         document.addEventListener('DOMContentLoaded', function() {
-            const currentYear = new Date().getFullYear();
+            const currentYear = new Date(2025).getFullYear();
             document.querySelectorAll('[data-year]').forEach(el => {
                 el.textContent = currentYear;
             });
