--- a/contact.html
+++ b/contact.html
@@ -152,7 +152,7 @@
                             </div>
                             <div>
                                 <h3 class="font-semibold text-lg mb-1">Email</h3>
-                                <p class="text-gray-700">info@evervowjewels.com</p>
+                                <p class="text-gray-700">michellegaolekwe@gmail.com</p>
                                 <p class="text-gray-700">Customer Support: support@evervowjewels.com</p>
                             </div>
                         </div>
@@ -181,7 +181,7 @@
             <div class="grid grid-cols-1 md:grid-cols-4 gap-8">
                 <div>
                     <h3 class="text-xl font-playfair font-bold mb-4">EverVow Jewels</h3>
-                    <p class="text-gray-400">Timeless elegance crafted for you since <span data-year>2025</span>.</p>
+                    <p class="text-gray-400">Timeless elegance crafted for you since <span data-year>2023</span>.</p>
                 </div>
                 <div>
                     <h4 class="font-semibold mb-4">Quick Links</h4>
