--- a/contact.html
+++ b/contact.html
@@ -181,7 +181,7 @@
             <div class="grid grid-cols-1 md:grid-cols-4 gap-8">
                 <div>
                     <h3 class="text-xl font-playfair font-bold mb-4">EverVow Jewels</h3>
-                    <p class="text-gray-400">Timeless elegance crafted for you since <span data-year>2023</span>.</p>
+                    <p class="text-gray-400">Timeless elegance crafted for you since 2023 <span data-year>2023</span>.</p>
                 </div>
                 <div>
                     <h4 class="font-semibold mb-4">Quick Links</h4>
