--- a/index.html
+++ b/index.html
@@ -59,17 +59,6 @@
         </div>
     </header>
 
-    <!-- Mobile Navigation -->
-    <div class="md:hidden bg-gray-100 py-2 px-4">
-        <div class="flex justify-around">
-            <a href="index.html" class="text-amber-600" aria-label="Home"><i class="fas fa-home"></i></a>
-            <a href="shop.html" class="text-gray-800" aria-label="Shop"><i class="fas fa-shopping-bag"></i></a>
-            <a href="about.html" class="text-gray-800" aria-label="About"><i class="fas fa-info-circle"></i></a>
-            <a href="testimonials.html" class="text-gray-800" aria-label="Testimonials"><i class="fas fa-star"></i></a>
-            <a href="contact.html" class="text-gray-800" aria-label="Contact"><i class="fas fa-envelope"></i></a>
-        </div>
-    </div>
-
     <!-- Hero Section -->
     <section class="hero-section bg-amber-50 text-white py-20 md:py-32">
         <div class="container mx-auto px-4 text-center">
@@ -90,8 +79,8 @@
             <div id="collectionsCarousel" class="carousel slide" data-bs-ride="carousel">
                 <!-- Indicators -->
                 <div class="carousel-indicators">
-                    <button type="button" data-bs-target="#collectionsCarousel" data-bs-slide-to="0" class="active"></button>
-                    <button type="button" data-bs-target="#collectionsCarousel" data-bs-slide-to="1"></button>
+                    <button type="button" data-bs-target="#collectionsCarousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                    <button type="button" data-bs-target="#collectionsCarousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
                 </div>
                 
                 <!-- Slides -->
@@ -145,6 +134,14 @@
             </div>
         </div>
     </section>
+
+    <!-- Bootstrap JS and Popper.js -->
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"></script>
+
+</body>
+</html>
+
 
     <!-- Featured Products -->
     <section class="py-12 bg-gray-50">
